<?xml version="1.0"?>
<package>
  <name>dagny_viz</name>
  <version>0.0.0</version>
  <description>Example visualization of Dagny</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
